--- a/package.json
+++ b/package.json
@@ -2,19 +2,13 @@
   "name": "learnJS",
   "version": "1.0.0",
   "devDependencies": {
-    "chai": "~3.5.0",
-    "chai-as-promised": "~6.0.0",
-    "cucumber": "~1.3.2",
+    "jasmine": "^3.4.0",
     "protractor": "^5.1.1",
     "protractor-cucumber-framework": "^3.0.0"
   },
   "scripts": {
     "prestart-webdriver": "webdriver-manager update",
-    "start-webdriver": "webdriver-manager start",
-    "protractor": "protractor protractor.conf.js --ignoreUncaughtExceptions"
-  },
-  "dependencies": {
-    "browser": "^0.2.6",
-    "chromedriver": "^75.0.0"
+    "start-wd": "webdriver-manager start",
+    "protractor": "./node_modules/.bin/protractor protractor.conf.js --ignoreUncaughtExceptions"
   }
 }
